<package format="3">
  <name>ueye_cam</name>
  <version>1.0.18</version>
  <description>
    A ROS nodelet and node that wraps the driver API for UEye cameras
    by IDS Imaging Development Systems GMBH.
  </description>
  <maintainer email="anqixu@cim.mcgill.ca">Anqi Xu</maintainer>
  <license>BSD</license>

  <author email="anqixu@cim.mcgill.ca">Anqi Xu</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>

</package>
