<package format="3">
  <name>ueye_cam</name>
  <version>1.0.19</version>
  <description>
    A ROS nodelet and node that wraps the driver API for UEye cameras
    by IDS Imaging Development Systems GMBH.
  </description>
  <maintainer email="anqixu@cim.mcgill.ca">Anqi Xu</maintainer>
  <license>BSD</license>

  <author email="anqixu@cim.mcgill.ca">Anqi Xu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_calibration_parsers</depend>
  <depend>camera_info_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
